--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "axios": "^0.19.2",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "jquery": "^3.5.1",
     "mongoose": "^5.9.14"
   },
   "devDependencies": {
