--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "jquery": "^3.5.1",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
